Fixes #18379: Create hooks for when a node inventory is received

--- a/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/node-post-acceptance/readme.adoc
+++ b/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/node-post-acceptance/readme.adoc
@@ -2,10 +2,10 @@
 
 == When/What ?
 
-This directory contains hooks executed after a node was successfully accepted. 
+This directory contains hooks executed after a node was successfully accepted.
 
 Typically, these hooks triggers action on other system, like registering the node
-into a monitoring system or into an external CMDB, or to send notification. 
+into a monitoring system or into an external CMDB, or to send notification.
 
 == Parameters
 
@@ -14,4 +14,4 @@ Hooks parameters are passed by environment variable:
 - RUDDER_NODE_ID              : the nodeId
 - RUDDER_NODE_HOSTNAME        : the node fully qualified hostname
 - RUDDER_NODE_POLICY_SERVER_ID: the node policy server id
-- RUDDER_AGENT_TYPE           : agent type ("cfengine-nova" or "cfengine-community")
+- RUDDER_AGENT_TYPE           : agent type ("cfengine-community" or "dsc")
