--- a/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/node-post-deletion/readme.adoc
+++ b/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/node-post-deletion/readme.adoc
@@ -2,10 +2,10 @@
 
 == When/What ?
 
-This directory contains hooks executed after a node was successfully deleted. 
+This directory contains hooks executed after a node was successfully deleted.
 
 Typically, these hooks clean resources related to that node and
-notify external services that the node was deleted from Rudder. 
+notify external services that the node was deleted from Rudder.
 
 == Parameters
 
@@ -14,10 +14,10 @@ Hooks parameters are passed by environment variable:
 - RUDDER_NODE_ID: the nodeId
 - RUDDER_NODE_HOSTNAME: the node fully qualified hostname
 - RUDDER_NODE_POLICY_SERVER_ID: the node policy server id
-- RUDDER_AGENT_TYPE : agent type ("cfengine-nova" or "cfengine-community")
+- RUDDER_AGENT_TYPE : agent type ("cfengine-community" or "dsc")
 - RUDDER_POLICIES_DIRECTORY_CURRENT: the full path of the base directory containing policies for that node
 - RUDDER_POLICIES_DIRECTORY_NEW: the full path of the base directory containing next policies for that node (during a generation)
 - RUDDER_POLICIES_DIRECTORY_ARCHIVE: the full path of the base directory containing previous policies for that node
 - RUDDER_NODE_ROLES: a comma separated list of node's server role name
 
- 
+
