--- a/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/policy-generation-node-finished/readme.adoc
+++ b/webapp/sources/rudder/rudder-core/src/main/resources/hooks.d/policy-generation-node-finished/readme.adoc
@@ -18,12 +18,11 @@ date/time that identify that policy generation start
 - RUDDER_NODE_ID                    : the nodeId
 - RUDDER_NODE_HOSTNAME              : the node fully qualified hostname
 - RUDDER_NODE_POLICY_SERVER_ID      : the node policy server id
-- RUDDER_AGENT_TYPE                 : agent type ("cfengine-nova" or "cfengine-community")
+- RUDDER_AGENT_TYPE                 : agent type ("cfengine-community" or "dsc")
 - RUDDER_POLICIES_DIRECTORY_CURRENT : new policies directory (for ex for nodes
 under root: /var/rudder/share/$RUDDER_NODE_ID/rules)
 
 Technically, you could infer RUDDER_POLICIES_DIRECTORY_NEW, from RUDDER_NODE_ID, but it's tedious
 for nodes behind a relay, and it is just simpler not to have to track what are the Rudder internal names,
 which may change without notice.
- 
- 
+
